--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@
 .hero-section {
     position: relative;
     height: 100vh;
-    background: url('../img/background-img.JPG') center/cover no-repeat;
+    background: url('/img/background-img.JPG') center/cover no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
