--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
 main {
-    padding-top: 20px; /* Adjust padding as needed to fit below the nav */
+    padding-top: 0px; /* Adjust padding as needed to fit below the nav */
 }
 
 
@@ -90,7 +90,7 @@ main {
 /* Gallery Grid */
 .gallery-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Responsive columns */
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Responsive columns */
     gap: 10px; /* Space between items */
     padding: 10px;
 }
@@ -203,6 +203,10 @@ main {
     }
     .description {
         font-size: 0.85rem;
+    }
+    .gallery-filter a:hover {
+    background-color: none;
+    color: #111;
     }
 
    
