--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
+
 }
 body{
     background: url('../img/background-img2.png') center/cover no-repeat fixed;
@@ -265,18 +266,41 @@ body{
 }
 
 .service-card {
+    position: relative;
+    width: 350px;
     background-color: #f9f9f9;
     border-radius: 8px;
-    padding: 30px 20px;
-    width: 350px;
+    overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    text-align: center;
+    padding: 10px;
 }
 
 .service-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+}
+.service-card-image {
+    position: relative;
+    height: 200px;
+    overflow: hidden;
+}
+
+.service-card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.service-card-image::after {
+    content: "";
+    position: absolute;
+    bottom: -35px;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    background-color: #f9f9f9; /* Matches card background color */
+    transform: skewY(-5deg);
+    transform-origin: top left;
 }
 
 .service-card i {
@@ -451,7 +475,7 @@ body{
 
 .footer-links h4, .footer-contact h4, .footer-social h4 {
     font-size: 1rem;
-    color: #F59527; /* Yellow accent for headings */
+    color: #f79425; /* Yellow accent for headings */
     margin-bottom: 10px;
 }
 
